<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.beeaware.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:lineSpacingExtra="2dp"
        android:text="@string/body_parts_question"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/right_body_parts_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/right_body_parts_1"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/right_body_parts_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/right_body_parts_2"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/wrong_body_parts_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/wrong_body_parts_1"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/wrong_body_parts_answer_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/wrong_body_parts_2"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/submit_answer"
            android:textAllCaps="true"
            android:onClick="answerQuestionBodyParts"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/skip_question"
            android:textAllCaps="true"
            android:onClick="goToEnd"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/bee_head"
        />

</LinearLayout>